configured helper to add css classes by js in the body

--- a/spec/dummy/app/views/layouts/application.html.slim
+++ b/spec/dummy/app/views/layouts/application.html.slim
@@ -2,7 +2,9 @@
 html
   head
     title Dummy
+    = javascript_include_tag("init")
 
   body
     = yield
     = namespaced_javascript_calls()
+    = initialize_namespaced_css_classes
