--- a/spec/dummy/app/views/layouts/application.html.slim
+++ b/spec/dummy/app/views/layouts/application.html.slim
@@ -6,5 +6,6 @@ html
 
   body
     = yield
+    = render(partial: 'application/_text/my_partial2')
     = namespaced_javascript_calls()
     = initialize_namespaced_css_classes
